<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:hint="@string/enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Day1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Day1" />

    <EditText
        android:id="@+id/Day2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Day2" />

    <EditText
        android:id="@+id/Day3"
        android:hint="@string/Day3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Day4"
        android:hint="@string/Day4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Day5"
        android:hint="@string/Day5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>